@@ -59,6 +59,7 @@ Version 6.0
 Version 5.2.8
 - fixed situation where TreatTinyAsBoolean had no effect with default database character set to UTF8
     (bug#46205)
+- fixed MySqlScript class so that it respects delimiter statements (bug #46429)
 
 Version 5.2.7  7/13/09
 - fixed procedure parameters collection so that an exception is thrown if we can't get the 
